--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "react": "16.2",
+    "react": "^17.0.2",
     "react-dom": "16.2",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
